fix sidebar paddings on mobile

--- a/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-item.css
+++ b/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-item.css
@@ -307,10 +307,6 @@
 	.sidebar-item {
 		padding: 0 0 0 var(--sidebar-small-default-padding);
 
-		& .badge {
-			margin: 0 0 0 3px;
-		}
-
 		&__user-status {
 			left: 4px;
 		}
